Version 1.12.4+dev:
 * Campaigns:
   * Eastern Invasion:
     * Fixed scenario events not working right on easy difficulty in 'Captured'.
   * Legend of Wesmere
     * Fixed carryover bugs in scenarios 5-12.
       (units misssing fron carryover, units appering twice on map...)
 * Language and i18n:
   * Updated translations: French, Japanese, Latvian
 * Multiplayer:
   * Era names no longer support formatting markup in the game setup screen.
   * Made MP lobby filter option filter on eras and mods too (bug #22987).
   * Fix scenario ending to early for players that are defeated if there are
     still players fighting and victory_when_enemies_defeated=no.
   * Fix 'enemies defated' event causing OOS error in mp scenarios.
 * Terrains:
   * Removed unit elevation from N-S hanging bridges
   * Added unit elevation to NW-SE and SW-NE stone chasm bridges
   * Added unit elevation to NW-SE and SW-NE plank bridges
   * Hanging, stone chasm, and plank bridges are now displayed in-game simply
     as "Bridge", retaining their descriptive names in the editor as per
     convention.
 * User interface:
   * Force uniform font rendering settings across X11 and Apple OS X, avoiding
     color glitches resulting from incorrect applications of subpixel hinting
     (bug #20337).
 * Miscellaneous and bug fixes:
   * Default to non-strict compilation with CMake.
   * Fixed strict compilation with clang 3.5 and 3.6.
   * Fixed unbound memory read in internal time formatting code with
     specially-crafted input.
   * Fixed RECRUIT_UNIT_VARIATIONS core WML macro leaking an internal temporary
     variable ($recruited_unit_random_variation).
   * Fixed unit [resistance] and [jamming_costs] not being considered for sync
     check.

Version 1.12.4:
 * Security fixes:
   * Disallowed WML inclusion of .pbl files with a non-lowercase extension too
     (CVE-2015-5070, bug #23504).
 * Miscellaneous and bug fixes:
   * Removed broken Python port of wmlxgettext from data/tools/.
