@@ -5,6 +5,8 @@ changelog: https://github.com/wesnoth/wesnoth/blob/1.12/changelog
 Version 1.12.4+dev:
  * Language and i18n:
    * Updated translations: French, Japanese, Latvian.
+   * Fixed crashes during start-up on Windows resulting from add-ons containing
+     erroneous textdomain declarations (bug #23839).
 
  * User interface:
    * Force uniform font rendering settings across X11 and Apple OS X, avoiding
