@@ -7,6 +7,8 @@ Version 1.12.4+dev:
        (units misssing fron carryover, units appering twice on map...)
  * Language and i18n:
    * Updated translations: French, Japanese, Latvian
+   * Fixed crashes during start-up on Windows resulting from add-ons containing
+     erroneous textdomain declarations (bug #23839).
  * Multiplayer:
    * Era names no longer support formatting markup in the game setup screen.
    * Made MP lobby filter option filter on eras and mods too (bug #22987).
